# shared_lib_test

./: .gitignore  CMakeLists.txt  readme.md
my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h  my_libConfig.cmake.in  my_lib_export.h
